--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.5.0",
+    "@react-oauth/google": "^0.5.1",
     "@sanity/client": "^3.4.1",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "18.11.13",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "axios": "^1.1.3",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.0.4",
+    "axios": "^1.2.1",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
-    "next": "13.0.4",
+    "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0",
-    "typescript": "4.9.3",
-    "uuidv4": "^6.2.13",
-    "zustand": "^4.1.4"
+    "react-icons": "^4.7.1",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.19",
+    "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
 }
